Add pico support

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,8 +18,17 @@ build_flags =
 
 upload_protocol = espota
 upload_flags = --auth=admin
-upload_port = 192.168.0.173
+upload_port = 192.168.0.192
 
 lib_deps =
 	${env.lib_deps}
     ArduinoOTA
+
+[env:pico]
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board = pico
+upload_protocol = picotool
+lib_deps = jostlowe/Pico-DMX @ ^3.0.1
+board_build.core = earlephilhower
+build_flags =
+		-DPICO
