--- a/platformio.ini
+++ b/platformio.ini
@@ -32,3 +32,19 @@ lib_deps = jostlowe/Pico-DMX @ ^3.0.1
 board_build.core = earlephilhower
 build_flags =
 		-DPICO
+
+[env:esp32c3]
+platform = espressif32
+board = seeed_xiao_esp32c3
+framework = arduino
+lib_deps = 
+		someweisguy/esp_dmx @ ^4.1.0
+		olikraus/U8g2
+		Wire
+
+monitor_speed = 921600
+upload_speed = 921600
+build_flags =
+  -D ARDUINO_USB_MODE=1
+  -D ARDUINO_USB_CDC_ON_BOOT=1
+	-D  ESP32C3
